cleaning open 19 updated

--- a/open_19_cleaning.ipynb
+++ b/open_19_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "colored-witness",
+   "id": "standing-rehabilitation",
    "metadata": {},
    "source": [
     "# Data Cleaning Process"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "martial-nirvana",
+   "id": "characteristic-version",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "relative-civilization",
+   "id": "resistant-excess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "confirmed-causing",
+   "id": "running-burden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-defensive",
+   "id": "accepting-decimal",
    "metadata": {},
    "source": [
     "---"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protective-unknown",
+   "id": "dominican-compression",
    "metadata": {},
    "source": [
     "#### drop neglected features:"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fundamental-answer",
+   "id": "ideal-halloween",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggressive-boundary",
+   "id": "operational-petersburg",
    "metadata": {},
    "source": [
     "---"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-stretch",
+   "id": "tough-treasury",
    "metadata": {},
    "source": [
     "## Reshaping Score Dataset"
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-department",
+   "id": "flexible-malpractice",
    "metadata": {},
    "source": [
-    "* reshape the score dataset in a way that each athlete become just one observation (=row) in the dataset\n",
+    "* reshape the score dataset in a way that each athlete receives just one observation (=row) in the dataset\n",
     "* thus, the score dataframe receives more features (=columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "broke-islam",
+   "id": "improving-williams",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driving-console",
+   "id": "separate-tracker",
    "metadata": {},
    "source": [
     "### extract data from rows & create new features"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-italy",
+   "id": "solid-chassis",
    "metadata": {},
    "source": [
     "for each ordinal value, create following features and append to the dataframe:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "clean-translation",
+   "id": "maritime-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relative-shore",
+   "id": "raised-niger",
    "metadata": {},
    "source": [
     "---"
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-raleigh",
+   "id": "nuclear-shepherd",
    "metadata": {},
    "source": [
     "## Drop redundant information from dataframes"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-timeline",
+   "id": "knowing-future",
    "metadata": {},
    "source": [
     "In both datasets there are many double competitorid values because of some divisions counted twice for athlete who belong to two divisions. Because of those divisions there are different values for overallscore and overallrank (in the athlete dataset) and for the ranks of each competition. We will drop double counted rows after overriding the values in a way that only the superordinate division (Men or Women) counts."
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "severe-mattress",
+   "id": "continuous-central",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "running-finish",
+   "id": "guilty-bridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "similar-unknown",
+   "id": "musical-roads",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dressed-mediterranean",
+   "id": "banned-character",
    "metadata": {},
    "source": [
     "---"
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-thunder",
+   "id": "musical-motor",
    "metadata": {},
    "source": [
     "## Combine the dataframes"
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "suspended-purpose",
+   "id": "paperback-montgomery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suitable-samoa",
+   "id": "committed-syracuse",
    "metadata": {},
    "source": [
     "---"
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "industrial-thumb",
+   "id": "divided-military",
    "metadata": {},
    "source": [
     "## Extract Breakdown Information"
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ahead-hybrid",
+   "id": "straight-editing",
    "metadata": {},
    "source": [
     "---"
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abstract-watson",
+   "id": "urban-practitioner",
    "metadata": {},
    "source": [
     "### 19.1 - wallball shots & rowing"
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "linear-biology",
+   "id": "global-semiconductor",
    "metadata": {},
    "source": [
     "extract:\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "iraqi-worth",
+   "id": "political-belfast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "norman-toner",
+   "id": "joint-observer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "norwegian-fitness",
+   "id": "aboriginal-titanium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "specialized-testimony",
+   "id": "ecological-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hairy-desperate",
+   "id": "elementary-leonard",
    "metadata": {},
    "source": [
     "---"
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-azerbaijan",
+   "id": "postal-hardwood",
    "metadata": {},
    "source": [
     "### 19.2 - T2B, DU & Squat-Clean"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biblical-dollar",
+   "id": "japanese-distinction",
    "metadata": {},
    "source": [
     "extract:\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ignored-vaccine",
+   "id": "prostate-separate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "strange-associate",
+   "id": "sunrise-senator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "selective-eight",
+   "id": "earlier-wyoming",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "lucky-rapid",
+   "id": "aboriginal-resource",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "minute-prairie",
+   "id": "certified-surfing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "exclusive-regard",
+   "id": "domestic-medicaid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dried-stake",
+   "id": "italian-relay",
    "metadata": {},
    "source": [
     "---"
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colored-relative",
+   "id": "published-howard",
    "metadata": {},
    "source": [
     "### 19.3 - OH-Lunges, DB-Box-Stepups, strict HSPU & HS-Walk"
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metallic-armor",
+   "id": "demonstrated-mistress",
    "metadata": {},
    "source": [
     "extract:\n",
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "naughty-belief",
+   "id": "given-notebook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "coordinate-request",
+   "id": "german-alcohol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fixed-regulation",
+   "id": "above-faculty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "sunset-documentary",
+   "id": "atomic-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fifty-exercise",
+   "id": "tracked-compound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "potential-world",
+   "id": "bibliographic-ordinary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-tongue",
+   "id": "alpha-allocation",
    "metadata": {},
    "source": [
     "---"
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-relevance",
+   "id": "advised-vertex",
    "metadata": {},
    "source": [
     "### 19.4 - Snatches, Bar-facing Burpees & Bar-MuscleUps"
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modular-honey",
+   "id": "prescription-biodiversity",
    "metadata": {},
    "source": [
     "extract:\n",
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "trying-banking",
+   "id": "iraqi-confirmation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "recreational-packet",
+   "id": "vocal-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "awful-chamber",
+   "id": "liquid-bonus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "comprehensive-shooting",
+   "id": "indoor-fever",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "responsible-daily",
+   "id": "organizational-joshua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "compressed-tribute",
+   "id": "capable-chapel",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "pending-faculty",
+   "id": "joint-architecture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proved-transmission",
+   "id": "specialized-pierce",
    "metadata": {},
    "source": [
     "---"
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "found-topic",
+   "id": "imperial-address",
    "metadata": {},
    "source": [
     "### 19.5 - Thrusters & C2B-PullUps"
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "irish-asbestos",
+   "id": "behavioral-supervision",
    "metadata": {},
    "source": [
     "extract:\n",
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "realistic-edwards",
+   "id": "exceptional-penalty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "metropolitan-preserve",
+   "id": "seasonal-february",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bright-auction",
+   "id": "hawaiian-malpractice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "german-nashville",
+   "id": "equal-intersection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suitable-latest",
+   "id": "green-fraction",
    "metadata": {},
    "source": [
     "---"
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specified-doctrine",
+   "id": "sunrise-footage",
    "metadata": {},
    "source": [
     "### Add new features to the combined dataset"
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "funded-spotlight",
+   "id": "compliant-physics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "statistical-border",
+   "id": "ranking-field",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "institutional-commons",
+   "id": "outside-simulation",
    "metadata": {},
    "source": [
     "---"
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quantitative-channel",
+   "id": "scheduled-tooth",
    "metadata": {},
    "source": [
     "### replace missing values in affiliatename"
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "willing-boards",
+   "id": "distinct-collect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-casino",
+   "id": "hindu-chapter",
    "metadata": {},
    "source": [
     "---"
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technological-architecture",
+   "id": "worthy-latest",
    "metadata": {},
    "source": [
     "### drop observations where all workout scores are zero"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "compliant-meter",
+   "id": "arabic-soviet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatty-asthma",
+   "id": "small-arrival",
    "metadata": {},
    "source": [
     "---"
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verbal-dollar",
+   "id": "familiar-shore",
    "metadata": {},
    "source": [
     "### set senseless height & weight + age values to NaN"
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "sized-prayer",
+   "id": "removed-performance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "southwest-hebrew",
+   "id": "athletic-vanilla",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "quiet-freeze",
+   "id": "reliable-public",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "entertaining-moisture",
+   "id": "controversial-andorra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "recreational-israel",
+   "id": "distinct-fifty",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welcome-necessity",
+   "id": "funded-mentor",
    "metadata": {},
    "source": [
     "Plot above shows a significant BMI-seperation after excluding athletes with high obesity. Since there a many senseless data regarding weight and height given and the fact that more than half of athletes did not give data at all, weight and height don't seem to be very trustful. Furthermore high weights can be explained with lbs-units instead of kg. It should be considered to drop later on in EDA."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "steady-piece",
+   "id": "mighty-sense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "computational-telephone",
+   "id": "sophisticated-grenada",
    "metadata": {},
    "source": [
     "---"
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-performance",
+   "id": "nonprofit-navigation",
    "metadata": {},
    "source": [
     "### Save dataframe in csv-file"
@@ -1509,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "experimental-navigation",
+   "id": "focused-transition",
    "metadata": {},
    "outputs": [],
    "source": [
